Lorem Ipsum Added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <title>GCDC Indore</title>
+    <title>GCDC Indore Newsletter</title>
 
     <style type="text/css">
       body {
@@ -219,6 +219,7 @@
                         >
                           <tr>
                             <td>
+                              <!-- Blog Image -->
                               <img src="https://unsplash.it/200" alt="" />
                             </td>
                           </tr>
@@ -234,11 +235,13 @@
                         >
                           <tr>
                             <td>
+                              <!-- Blog Heading -->
                               <h3>Lorem, ipsum</h3>
                             </td>
                           </tr>
                           <tr>
                             <td>
+                              <!-- Blog Content -->
                               <p>
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Placeat labore ut dolorum,
@@ -249,6 +252,7 @@
                           </tr>
                           <tr align="center">
                             <td>
+                              <!-- Button -->
                               <a href="#">Know More</a>
                             </td>
                           </tr>
@@ -260,6 +264,7 @@
               </tr>
               <tr>
                 <td>
+                  <!-- Blog Container Starts -->
                   <table
                     cellpadding="0"
                     cellspacing="0"
@@ -268,6 +273,7 @@
                   >
                     <tr>
                       <td>
+                        <!-- Image container -->
                         <table
                           cellpadding="0"
                           cellspacing="0"
@@ -277,11 +283,13 @@
                         >
                           <tr>
                             <td>
+                              <!-- Blog Image -->
                               <img src="https://unsplash.it/200" alt="" />
                             </td>
                           </tr>
                         </table>
 
+                        <!-- Content Container -->
                         <table
                           cellpadding="0"
                           cellspacing="0"
@@ -291,11 +299,13 @@
                         >
                           <tr>
                             <td>
+                              <!-- Blog Heading -->
                               <h3>Lorem, ipsum</h3>
                             </td>
                           </tr>
                           <tr>
                             <td>
+                              <!-- Blog Content -->
                               <p>
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Placeat labore ut dolorum,
@@ -306,6 +316,7 @@
                           </tr>
                           <tr align="center">
                             <td>
+                              <!-- Button -->
                               <a href="#">Know More</a>
                             </td>
                           </tr>
@@ -317,6 +328,7 @@
               </tr>
               <tr>
                 <td>
+                  <!-- Blog Container Starts -->
                   <table
                     cellpadding="0"
                     cellspacing="0"
@@ -325,6 +337,7 @@
                   >
                     <tr>
                       <td>
+                        <!-- Image container -->
                         <table
                           cellpadding="0"
                           cellspacing="0"
@@ -334,11 +347,13 @@
                         >
                           <tr>
                             <td>
+                              <!-- Blog Image -->
                               <img src="https://unsplash.it/200" alt="" />
                             </td>
                           </tr>
                         </table>
 
+                        <!-- Content Container -->
                         <table
                           cellpadding="0"
                           cellspacing="0"
@@ -348,11 +363,13 @@
                         >
                           <tr>
                             <td>
+                              <!-- Blog Heading -->
                               <h3>Lorem, ipsum</h3>
                             </td>
                           </tr>
                           <tr>
                             <td>
+                              <!-- Blog Content -->
                               <p>
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Placeat labore ut dolorum,
@@ -363,6 +380,7 @@
                           </tr>
                           <tr align="center">
                             <td>
+                              <!-- Button -->
                               <a href="#">Know More</a>
                             </td>
                           </tr>
@@ -401,13 +419,28 @@
               <tr>
                 <td>
                   <div class="news">
-                    <h3>Other Events Happening</h3>
+                    <h3>Lorem, ipsum dolor.</h3>
                     <ul>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
                     </ul>
                   </div>
                 </td>
@@ -415,13 +448,28 @@
               <tr>
                 <td>
                   <div class="news">
-                    <h3>Other Events Happening</h3>
+                    <h3>Lorem, ipsum dolor.</h3>
                     <ul>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
                     </ul>
                   </div>
                 </td>
@@ -429,13 +477,28 @@
               <tr>
                 <td>
                   <div class="news">
-                    <h3>Other Events Happening</h3>
+                    <h3>Lorem, ipsum dolor.</h3>
                     <ul>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
                     </ul>
                   </div>
                 </td>
