--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <style type="text/css">
       body {
-        background: lightgray;
+        background: white;
       }
       .wrapper {
         width: 800px;
@@ -23,10 +23,10 @@
       .outer-table {
         width: 700px;
         margin: 0 auto;
-        background: blue;
+        background: gray;
       }
       .inner-table {
-        background: white;
+        background: whitesmoke;
         width: 605px;
       }
       /*--- Media Queries--*/
@@ -572,10 +572,15 @@
                           border="1"
                           align="right"
                           width="20%"
+                          style="text-align:center"
                         >
                           <tr>
-                            <td><i class="fab fa-facebook-square"></i></td>
-                            <td><i class="fab fa-twitter-square"></i></td>
+                            <td style="color: blue">
+                              <i class="fab fa-facebook-square"></i>
+                            </td>
+                            <td style="color: cadetblue">
+                              <i class="fab fa-twitter-square"></i>
+                            </td>
                             <td><i class="fab fa-instagram"></i></td>
                             <td><i class="fab fa-meetup"></i></td>
                             <td><i class="far fa-star"></i></td>
