--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   >
                     <tr>
                       <td>
-                        <!-- Pre Headers-->
+                        <!-- Pre Headers--> 
                         <table
                           class="pre-header-1"
                           cellpadding="5"
@@ -141,7 +141,7 @@
                         <!-- Header Image -->
                         <a href="#">
                           <img
-                            src="https://cloud.google.com/_static/aa82ec56a9/images/cloud/cloud-logo.svg"
+                            src="logo.png"
                             alt="GCDC Logo"
                             width="100%"
                           />
