Footer Image Issue Solved

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                     <tr>
                       <td>
                         <table>
-                          <a href="#">
+                          <a href="https://www.google.com">
                             <img
                               src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a383fa84-80d7-4aba-8eb5-94eb75b91d6a.png"
                               alt="GCDC Logo"
@@ -666,7 +666,3 @@
     <!-- End Wrapper-->
   </body>
 </html>
-
-<!--
-  
--->
