--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500%7C"
     />
-    <title>GCDC Indore Newsletter - April, 2019</title>
+    <title>GCDC Indore Newsletter Template</title>
 
     <style type="text/css">
       * {
@@ -153,27 +153,31 @@
                       <td>
                         <!-- Post Header Begins-->
                         <!-- Month, Year-->
-                        <!-- Archives currently commented-->
+                        <!-- Archives-->
                         <table
                           cellpadding="0"
                           cellspacing="0"
-                          align="center"
-                          width="100%"
+                          align="left"
+                          width="50%"
                         >
                           <!-- Change Width-->
-                          <tr style="text-align:center;">
-                            <td><strong>April, 2019</strong></td>
+                          <tr>
+                            <td><strong>Month, Year</strong></td>
                           </tr>
                         </table>
 
-                        <!-- Commented Section -->
-                        <!--
-                        <table cellpadding="0" cellspacing="0" align="left" width="50%" style="text-align:right;">
+                        <table
+                          cellpadding="0"
+                          cellspacing="0"
+                          align="left"
+                          width="50%"
+                          style="text-align:right;"
+                        >
                           <tr>
-                            <td>Blah Blah Blah</td>
+                            <td><strong>Archives</strong></td>
                           </tr>
                         </table>
-                        -->
+
                         <!-- Post Header Ends -->
                       </td>
                     </tr>
@@ -199,20 +203,20 @@
               cellspacing="0"
               align="center"
             >
-              <!-- <tr>
-              <td style="padding:2px;"> -->
-              <!-- Blogs Heading -->
-              <!-- <table cellpadding="0" cellspacing="0" align="center">
               <tr>
-                <td>
-                  <h2 style="margin:0;">
-                    Topics
-                  </h2>
+                <td style="padding:2px;">
+                  <!-- Blogs Heading -->
+                  <table cellpadding="0" cellspacing="0" align="center">
+                    <tr>
+                      <td>
+                        <h2 style="margin:0;">
+                          Topics
+                        </h2>
+                      </td>
+                    </tr>
+                  </table>
                 </td>
               </tr>
-            </table>
-          </td>
-        </tr> -->
               <tr>
                 <td>
                   <!-- Blog Container 1 Starts -->
@@ -237,8 +241,8 @@
                               <img
                                 width="200"
                                 height="200"
-                                src="https://www.arctiq.ca/assets/posts/deploying-google-anthos-gke-on-prem-with-optiva/anthos.png"
-                                alt=""
+                                src="https://unsplash.it/200"
+                                alt="#"
                               />
                             </td>
                           </tr>
@@ -254,19 +258,19 @@
                           <tr>
                             <td>
                               <!-- Blog Heading  1 -->
-                              <h3 style="margin:5px;">Anthos</h3>
+                              <h3 style="margin:5px;">Lorem, ipsum.</h3>
                             </td>
                           </tr>
                           <tr>
                             <td>
                               <!-- Blog Content 1 -->
                               <p>
-                                Anthos lets you build and manage modern hybrid
-                                applications across environments. It transforms
-                                your architectural approach, lets you focus on
-                                innovation, allows you to move faster than ever
-                                without compromising security or increasing
-                                complexity.
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Doloremque vitae molestiae,
+                                architecto esse, dolorum officia deleniti
+                                veritatis et illum explicabo odio inventore sed
+                                eveniet in, aut minima? Fugiat assumenda
+                                deleniti, perferendis enim id placeat!
                               </p>
                             </td>
                           </tr>
@@ -275,7 +279,7 @@
                               <!-- Button 1 -->
                               <a
                                 style="background:rgb(0,133,255);color:#FFFFFF;padding:5px;border-radius:5px;"
-                                href="https://cloud.google.com/anthos/"
+                                href="#"
                                 target="_blank"
                                 >Know More</a
                               >
@@ -311,7 +315,7 @@
                               <img
                                 width="200"
                                 height="200"
-                                src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/91fa1907-ec60-4e33-ab8d-66d8dabaeabd.png"
+                                src="https://unsplash.it/200"
                                 alt="Cloud Code"
                               />
                             </td>
@@ -328,19 +332,20 @@
                           <tr>
                             <td>
                               <!-- Blog Heading 2 -->
-                              <h3 style="margin:5px;">Cloud Code</h3>
+                              <h3 style="margin:5px;">Lorem, ipsum.</h3>
                             </td>
                           </tr>
                           <tr>
                             <td>
                               <!-- Blog Content 2 -->
                               <p>
-                                Cloud Code comes with tools to help you write,
-                                deploy, and debug cloud-native applications
-                                quickly and easily. Extensions to IDEs such as
-                                Visual Studio Code and IntelliJ are provided to
-                                let you rapidly iterate, debug, and deploy code
-                                to Kubernetes.
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Quia est minima, cum animi
+                                dolores nihil dolor at omnis maiores.
+                                Voluptatibus asperiores vero atque maiores
+                                laboriosam harum? Tenetur necessitatibus
+                                voluptates sapiente placeat temporibus sint
+                                fuga.
                               </p>
                             </td>
                           </tr>
@@ -349,7 +354,7 @@
                               <!-- Button 2 -->
                               <a
                                 style="background:rgb(0,133,255);color:#FFFFFF;padding:5px;border-radius:5px;"
-                                href="https://cloud.google.com/code/docs/"
+                                href="#"
                                 target="_blank"
                                 >Know More</a
                               >
@@ -385,8 +390,8 @@
                               <img
                                 width="200"
                                 height="200"
-                                src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/676dbc10-a0c6-4e1a-9fd0-4edfea3c0297.png"
-                                alt="Cloud Run"
+                                src="https://unsplash.it/200"
+                                alt="#"
                               />
                             </td>
                           </tr>
@@ -402,19 +407,20 @@
                           <tr>
                             <td>
                               <!-- Blog Heading 3 -->
-                              <h3 style="margin:5px;">Cloud Run</h3>
+                              <h3 style="margin:5px;">Lorem, ipsum.</h3>
                             </td>
                           </tr>
                           <tr>
                             <td>
                               <!-- Blog Content 3 -->
                               <p>
-                                Cloud Run is a managed compute platform that
-                                enables you to run stateless containers that are
-                                invocable via HTTP requests. Cloud Run is
-                                serverless: it abstracts away all infrastructure
-                                management, so you can focus on what matters
-                                most — building great applications.
+                                Lorem ipsum dolor sit, amet consectetur
+                                adipisicing elit. Pariatur, officia laudantium
+                                perferendis facilis atque enim consequatur
+                                corrupti et nisi explicabo eum est, maxime
+                                itaque, repellendus perspiciatis distinctio
+                                inventore autem dignissimos dolor incidunt.
+                                Temporibus, velit!
                               </p>
                             </td>
                           </tr>
@@ -423,7 +429,7 @@
                               <!-- Button 3 -->
                               <a
                                 style="background:rgb(0,133,255);color:#FFFFFF;padding:5px;border-radius:5px;"
-                                href="https://cloud.google.com/run/"
+                                href="#"
                                 target="_blank"
                                 >Know More</a
                               >
@@ -515,64 +521,64 @@
                   </div>
                 </td>
               </tr>
-              <!-- <tr>
-        <td>
-          <div class="news">
-            <h3>Lorem, ipsum dolor.</h3>
-            <ul>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Vitae, voluptate!
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Vitae, voluptate!
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Vitae, voluptate!
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Vitae, voluptate!
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Vitae, voluptate!
-              </li>
-            </ul>
-          </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="news">
-            <h3>Lorem, ipsum dolor.</h3>
-            <ul>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Vitae, voluptate!
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Vitae, voluptate!
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Vitae, voluptate!
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Vitae, voluptate!
-              </li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Vitae, voluptate!
-              </li>
-            </ul>
-          </div>
-        </td>
-      </tr> -->
+              <tr>
+                <td>
+                  <div class="news">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <ul>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                    </ul>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="news">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <ul>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                      <li>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Vitae, voluptate!
+                      </li>
+                    </ul>
+                  </div>
+                </td>
+              </tr>
             </table>
 
             <!-- Inner Table Ends here-->
@@ -616,35 +622,37 @@
                         >
                           <tr>
                             <td>
-                              <a href=""
+                              <a href="https://www.facebook.com/gcdcindore/"
                                 ><img
                                   src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/5d598183-0ebe-437a-a45c-b2f68c1d905f.png"
                                   alt="Facebook"
                               /></a>
                             </td>
                             <td>
-                              <a href=""
+                              <a href="https://twitter.com/gcdcIndore"
                                 ><img
                                   src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/20b26c35-b020-4ea2-a756-995d9a188cd2.png"
                                   alt="Twitter"
                               /></a>
                             </td>
                             <td>
-                              <a href=""
+                              <a href="https://www.instagram.com/gcdcindore/"
                                 ><img
                                   src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/4a070e19-87ab-4543-9c5c-3180f5ffe1ca.png"
                                   alt="Instagram"
                               /></a>
                             </td>
                             <td>
-                              <a href=""
+                              <a
+                                href="https://www.linkedin.com/in/google-cloud-developers-community-indore-984651172"
                                 ><img
                                   src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/0f0d2abc-0492-4c5c-9998-4b83ea8fc8fd.png"
                                   alt="Linkedin"
                               /></a>
                             </td>
                             <td>
-                              <a href=""
+                              <a
+                                href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
                                 ><img
                                   src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/a685aa5c-7ab5-4c77-b20e-dc7ff66dc464.png"
                                   alt="Meetup"
@@ -654,9 +662,7 @@
                         </table>
                       </td>
                     </tr>
-                    <tr>
-                      <td></td>
-                    </tr>
+
                     <tr>
                       <td>
                         <img
