--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500%7C"
     />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>GCDC Indore Newsletter</title>
   </head>
   <style>
