--- a/Newsletters/april2019.html
+++ b/Newsletters/april2019.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      rel="shortcut icon"
+      href="../images/favicon.ico"
+      type="image/x-icon"
     />
     <link
       rel="stylesheet"
